Clean theme.liquid

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -24,6 +24,12 @@
     }
   {%- endif -%}
 
+  {%- if section.settings.enable_transparent_header and template contains 'index' -%}
+    sticky-header {
+      height: 0;
+    }
+  {%- endif -%}
+
   {%- if section.settings.menu_type_desktop != "drawer" -%}
     @media screen and (min-width: 990px) {
       header-drawer {
@@ -75,6 +81,8 @@
 {%- style -%}
   .header {
     padding: {{ section.settings.padding_top | times: 0.5 | round: 0 }}px 3rem {{ section.settings.padding_bottom | times: 0.5 | round: 0 }}px 3rem;
+    display: flex;
+    justify-content: space-between;
   }
 
   .section-header {
@@ -200,7 +208,7 @@
       {%- endif -%}
     {%- endif -%}
 
-    <div class="header__icons{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
+    {% comment %} <div class="header__icons{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
       <div class="desktop-localization-wrapper">
         {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
           <localization-form class="small-hide medium-hide" data-prevent-hide>
@@ -278,7 +286,7 @@
           </div>
         {%- endif -%}
       </a>
-    </div>
+    </div> {% endcomment %}
   </header>
 </{% if section.settings.sticky_header_type != 'none' %}sticky-header{% else %}div{% endif %}>
 
@@ -552,6 +560,16 @@
       "id": "enable_country_selector",
       "default": false,
       "label": "t:sections.header.settings.enable_country_selector.label"
+    },
+    {
+      "type": "header",
+      "content": "Transparent Header"
+    },
+    {
+      "type": "checkbox",
+      "id": "enable_transparent_header",
+      "default": false,
+      "label": "Enable Transparent Header"
     },
     {
       "type": "header",
