--- a/snippets/es-css-variable.liquid
+++ b/snippets/es-css-variable.liquid
@@ -5,6 +5,20 @@
   {{ body_font_bold_italic | font_face: font_display: 'swap' }}
   {{ settings.type_header_font | font_face: font_display: 'swap' }}
 
+  @font-face {
+    font-family: "SF Pro Display";
+    src:  url("https://cdn.shopify.com/s/files/1/0721/3472/1777/files/SFPRODISPLAYREGULAR.woff?v=1733483075") format('woff'),
+          url("https://cdn.shopify.com/s/files/1/0721/3472/1777/files/SFPRODISPLAYREGULAR.woff2?v=1733483075") format("woff2");
+    font-weight: 400;
+  }
+
+  @font-face {
+    font-family: "SF Pro Display";
+    src:  url("https://cdn.shopify.com/s/files/1/0721/3472/1777/files/SFPRODISPLAYMEDIUM.woff?v=1733483076") format('woff'),
+          url("https://cdn.shopify.com/s/files/1/0721/3472/1777/files/SFPRODISPLAYMEDIUM.woff2?v=1733483075") format("woff2");
+    font-weight: 500;
+  }
+
   {% for scheme in settings.color_schemes -%}
     {% assign scheme_classes = scheme_classes | append: ', .color-' | append: scheme.id %}
     {% if forloop.index == 1 -%}
@@ -51,7 +65,8 @@
   }
 
   :root {
-    --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
+    /* --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }}; */
+    --font-body-family: "SF Pro Display", {{ settings.type_body_font.fallback_families }};
     --font-body-style: {{ settings.type_body_font.style }};
     --font-body-weight: {{ settings.type_body_font.weight }};
     --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
