--- a/snippets/es-css-variable.liquid
+++ b/snippets/es-css-variable.liquid
@@ -19,6 +19,126 @@
     font-weight: 500;
   }
 
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBoldItalic.eot');
+    src: local('Ivy Journal SemiBold Italic'), local('IvyJournal-SemiBoldItalic'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBoldItalic.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBoldItalic.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBoldItalic.ttf') format('truetype');
+    font-weight: 600;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Regular.eot');
+    src: local('Ivy Journal Regular'), local('IvyJournal-Regular'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Regular.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Regular.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Regular.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-LightItalic.eot');
+    src: local('Ivy Journal Light Italic'), local('IvyJournal-LightItalic'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-LightItalic.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-LightItalic.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-LightItalic.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Bold.eot');
+    src: local('Ivy Journal Bold'), local('IvyJournal-Bold'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Bold.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Bold.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Bold.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-ThinItalic.eot');
+    src: local('Ivy Journal Thin Italic'), local('IvyJournal-ThinItalic'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-ThinItalic.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-ThinItalic.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-ThinItalic.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-ThinItalic.ttf') format('truetype');
+    font-weight: 100;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-BoldItalic.eot');
+    src: local('Ivy Journal Bold Italic'), local('IvyJournal-BoldItalic'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-BoldItalic.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-BoldItalic.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Italic.eot');
+    src: local('Ivy Journal Italic'), local('IvyJournal-Italic'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Italic.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Italic.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Italic.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Light.eot');
+    src: local('Ivy Journal Light'), local('IvyJournal-Light'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Light.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Light.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Light.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Thin.eot');
+    src: local('Ivy Journal Thin'), local('IvyJournal-Thin'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Thin.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Thin.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Thin.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Ivy Journal';
+    src: url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBold.eot');
+    src: local('Ivy Journal SemiBold'), local('IvyJournal-SemiBold'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBold.woff2') format('woff2'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBold.woff') format('woff'),
+        url('https://cdn.shopify.com/s/files/1/0721/3472/1777/files/IvyJournal-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
+
   {% for scheme in settings.color_schemes -%}
     {% assign scheme_classes = scheme_classes | append: ', .color-' | append: scheme.id %}
     {% if forloop.index == 1 -%}
@@ -198,6 +318,8 @@
     box-sizing: border-box;
     font-size: calc(var(--font-body-scale) * 62.5%);
     height: 100%;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
   }
 
   body {
