--- a/assets/es.scss
+++ b/assets/es.scss
@@ -74,10 +74,10 @@
         color: #fff;
         display: block;
         font-size: 14px;
-        font-weight: 500;
+        font-weight: 400;
         line-height: 16px;
         text-align: center;
-        letter-spacing: 0.1em;
+        letter-spacing: 2.4px;
         text-decoration: unset;
         text-transform: uppercase;
         border-top: 1px solid #fff;
