--- a/assets/es.scss
+++ b/assets/es.scss
@@ -86,3 +86,41 @@
     }
   }
 }
+
+.rich-text {
+  .rich-text__wrapper {
+    .rich-text__blocks {
+      @media screen and (min-width: 990px) {
+        max-width: var(--max-width);
+      }
+
+      .rich-text__heading {
+        font-family: "Ivy Journal", sans-serif;
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 40px;
+
+        @media screen and (max-width: 768px) {
+          font-size: 24px;
+          line-height: 32px;
+        }
+      }
+
+      .rich-text__text {
+        a {
+          color: #000;
+          font-family: "SF Pro Display", sans-serif;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 19px;
+          letter-spacing: 0.1em;
+
+          @media screen and (max-width: 768px) {
+            font-size: 14px;
+            line-height: 16px;
+          }
+        }
+      }
+    }
+  }
+}
