--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -91,6 +91,8 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    {%- render 'es-swiper-plugin' -%}
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
