--- a/snippets/es-css-variable.liquid
+++ b/snippets/es-css-variable.liquid
@@ -314,6 +314,24 @@
     box-sizing: inherit;
   }
 
+  p,
+  ul,
+  li,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    display: block;
+    margin: auto;
+  }
+
   html {
     box-sizing: border-box;
     font-size: calc(var(--font-body-scale) * 62.5%);
