--- a/assets/es.scss
+++ b/assets/es.scss
@@ -1,3 +1,36 @@
+.hide {
+  display: none;
+}
+
+.font-h1 {
+  color: #000;
+  text-align: center;
+  font-family: "Ivy Journal";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+  @media screen and (max-width: 768px) {
+    font-size: 24px;
+  }
+}
+
+.font-h5 {
+  color: #9E9E9E;
+  text-align: center;
+  font-family: "SF Pro Display";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1.6px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 14px ;
+  }
+}
+
 .header__inline-menu {
   .list-menu {
     & > li {
@@ -166,6 +199,100 @@
           }
         }
       }
+    }
+  }
+}
+
+.es-image-gallery {
+  padding-top: var(--padding-top);
+  padding-bottom: var(--padding-bottom);
+
+  .page-width {
+    .image-gallery--list {
+      gap: 2px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .image-gallery--item {
+        .image {
+          position: relative;
+          height: 100%;
+
+          img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        &.image-gallery--item-portrait {
+          width: 30%;
+
+          @media screen and (max-width: 768px) {
+            width: 100%;
+          }
+
+          .image {
+            padding-top: 135%;
+          }
+        }
+
+        &.image-gallery--item-landscape {
+          width: calc(70% - 2px);
+
+          @media screen and (max-width: 768px) {
+            width: 100%;
+          }
+
+          .image {
+            padding-top: 65%;
+          }
+        }
+
+        &.image-gallery--item-hide {
+          display: none;
+        }
+      }
+    }
+
+    .image-gallery--button-wrapper {
+      padding-top: 60px;
+
+      button {
+        font-size: 16px;
+        font-weight: 400;
+        color: #2D2D2D;
+        font-style: normal;
+        line-height: normal;
+        font-family: "SF Pro Display";
+
+        @media screen and (max-width: 768px) {
+          min-height: 40px;
+        }
+      }
+
+      @media screen and (max-width: 768px) {
+        padding-top: 30px;
+      }
+    }
+  }
+}
+
+.video-section {
+  .title {
+    margin-top: 4px;
+  }
+
+  .deferred-media {
+    border-radius: 16px;
+    overflow: hidden !important;
+
+    @media screen and (max-width: 768px) {
+      border-radius: 8px;
     }
   }
 }
