--- a/assets/es.scss
+++ b/assets/es.scss
@@ -4,12 +4,12 @@
 
 .font-h1 {
   color: #000;
-  text-align: center;
-  font-family: "Ivy Journal";
   font-size: 32px;
-  font-style: normal;
   font-weight: 400;
+  font-style: normal;
+  text-align: center;
   line-height: normal;
+  font-family: "Ivy Journal", sans-serif;
 
   @media screen and (max-width: 768px) {
     font-size: 24px;
@@ -17,14 +17,14 @@
 }
 
 .font-h5 {
+  font-size: 16px;
+  font-weight: 500;
   color: #9E9E9E;
   text-align: center;
-  font-family: "SF Pro Display";
-  font-size: 16px;
   font-style: normal;
-  font-weight: 500;
   line-height: normal;
   letter-spacing: 1.6px;
+  font-family: "SF Pro Display", sans-serif;
 
   @media screen and (max-width: 768px) {
     font-size: 14px ;
@@ -64,12 +64,12 @@
 
   .banner__content {
     .subtitle {
-      font-family: "SF Pro Display", sans-serif;
       color: #fff;
       font-size: 16px;
       font-weight: 400;
       line-height: 19px;
       letter-spacing: 2.4px;
+      font-family: "SF Pro Display", sans-serif;
 
       @media (max-width: 768px) {
         font-size: 12px;
@@ -77,10 +77,10 @@
     }
 
     .banner__heading {
-      font-family: "Ivy Journal", sans-serif;
       font-size: 46px;
       font-weight: 400;
       line-height: 130%;
+      font-family: "Ivy Journal", sans-serif;
 
       @media (max-width: 768px) {
         font-size: 30px;
@@ -128,10 +128,10 @@
       }
 
       .rich-text__heading {
-        font-family: "Ivy Journal", sans-serif;
         font-size: 32px;
         font-weight: 400;
         line-height: 40px;
+        font-family: "Ivy Journal", sans-serif;
 
         @media screen and (max-width: 768px) {
           font-size: 24px;
@@ -300,7 +300,7 @@
 .footer {
   .footer__blocks-wrapper {
     align-items: center;
-    
+
     .footer-lwt {
       & > * + * {
         margin-top: 16px;
@@ -308,6 +308,10 @@
 
       img {
         margin: 0;
+
+        @media screen and (max-width: 768px) {
+          margin: auto;
+        }
       }
 
       .footer-lwt--text {
@@ -318,6 +322,11 @@
         font-style: normal;
         line-height: normal;
         font-family: "Ivy Journal", sans-serif;
+
+        @media screen and (max-width: 768px) {
+          margin: auto;
+          text-align: center;
+        }
       }
 
       .footer-lwt--icon-text {
@@ -335,6 +344,14 @@
         text-decoration-line: underline;
         font-family: "SF Pro Display", sans-serif;
 
+        @media screen and (max-width: 768px) {
+          justify-content: center;
+          
+          img {
+            margin: 0;
+          }
+        }
+
         a {
           color: inherit;
         }
@@ -348,8 +365,10 @@
       }
 
       &.center {
-        max-width: max-content;
-        margin-left: auto;
+        @media screen and (min-width: 769px) {
+          max-width: max-content;
+          margin-left: auto;  
+        }
 
         .footer-lwt--subtitle {
           color: #000;
@@ -361,6 +380,31 @@
           line-height: normal;
           max-width: 115px;
           margin: 12px auto 0;
+        }
+      }
+    }
+
+    .footer-block--menu {
+      .footer-block__details-content {
+        gap: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @media screen and (max-width: 768px) {
+          gap: 20px;
+        }
+  
+        li {
+          .link {
+            font-size: 16px;
+            color: #393939;
+            font-weight: 400;
+            font-style: normal;
+            line-height: normal;
+            text-decoration: unset;
+            font-family: "SF Pro Display";
+          }
         }
       }
     }
