--- a/assets/base.css
+++ b/assets/base.css
@@ -2347,7 +2347,7 @@ input[type='checkbox'] {
 }
 
 .header-wrapper--border-bottom {
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  border-bottom: 0.1rem solid #E4E4E4;
 }
 
 .header {
