--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer__content-top {
-  padding-bottom: 5rem;
+  /* padding-bottom: 5rem; */
   display: block;
 }
 
@@ -27,7 +27,7 @@
   }
 
   .footer__content-top {
-    padding-bottom: 3rem;
+    /* padding-bottom: 3rem; */
     padding-left: calc(4rem / var(--font-body-scale));
     padding-right: calc(4rem / var(--font-body-scale));
   }
