--- a/assets/es.scss
+++ b/assets/es.scss
@@ -466,7 +466,9 @@
       .button {
         font-size: 16px;
         font-weight: 400;
+        min-height: unset;
         font-style: normal;
+        padding: 12px 25px;
         line-height: normal;
         border-radius: 30px;
         font-family: "SF Pro Display", sans-serif;
